kafka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kafka
  namespace: kafka
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: kafka-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - kafka'
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: kafka.dominio.com.br
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: redpanda-console
                port:
                  number: 8080
